<resources>
    <string name="app_name">GroupSchedule</string>
    <string name="enter_college">Enter College</string>
    <string name="settings">Settings</string>
    <string name="todo">Todo</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="notifications_and_sounds">Notifications and sounds</string>
    <string name="gsu">GSU</string>
    <string name="enter_name">Enter Name</string>
    <string name="pause_notifications">Pause notifications</string>
    <string name="preferences">Preferences</string>
    <string name="groups">Groups</string>
    <string name="parth_shah">Parth Shah</string>
    <string name="my_calendar">My Calendar</string>
    <string name="pantherhack_android_string_fingerprint_icon_content_description">pantherhack @android:string/fingerprint_icon_content_description</string>
    <string name="support">Support</string>
    <string name="notifications">Notifications</string>
    <string name="_23_people_march_11_9_30_am">23 people | March 11 9:30 am</string>
    <string name="_20_people_march_12_1_30_pm">20 people | March 12 1:30 pm</string>
    <string name="_24_people_march_11_3_30_pm">24 people | March 11 3:30 pm</string>
    <string name="_26_people_march_11_2_30_pm">26 people | March 11 2:30 pm</string>
    <string name="choose_time">Choose Time</string>
    <string name="club_member_availability">Club Member Availability</string>
    <string name="event_1_details">Event 1 Details</string>
    <string name="event_2_details">Event 2 Details</string>
    <string name="event_3_details">Event 3 Details</string>
    <string name="event_4_details">Event 4 Details</string>
    <string name="event_5_details">Event 5 details</string>
    <string name="event_7_details">Event 7 Details</string>
    <string name="event_8_details">Event 8 Details</string>
    <string name="event_6_details">Event 6 details</string>
    <string name="events">Events</string>
    <string name="calendar">Calendar</string>
    <string name="choose_a_time">Choose A Time</string>
</resources>
